fix(security): close s7 privilege and concurrency gaps